resources/app-sre-stage/unleash/ocm.integration.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: ocm-integration
  name: ocm-integration
spec:
  host: ocm-integration.unleash.devshift.net
  to:
    kind: Service
    name: ocm-integration
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
