resources/app-sre-stage/unleash/ocm.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: ocm-stage
  name: ocm-stage
spec:
  host: ocm-stage.unleash.devshift.net
  to:
    kind: Service
    name: ocm-stage
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
